bsky/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: bsky
    app.kubernetes.io/name: bsky
  name: bsky
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bsky
      app.kubernetes.io/name: bsky
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: bsky
        app.kubernetes.io/name: bsky
    spec:
      containers:
        - image: ghcr.io/xjdao2025/bsky:latest
          imagePullPolicy: IfNotPresent
          name: bsky
          ports:
            - containerPort: ${BSKY_PORT}
              name: http
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /cache
              name: cache
            - mountPath: /etc/localtime
              name: node-localtime
        - image: m.daocloud.io/docker.io/postgres:16-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
            - mountPath: /etc/localtime
              name: node-localtime
        - image: m.daocloud.io/docker.io/redis:7-bookworm
          imagePullPolicy: IfNotPresent
          name: redis
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources: 
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext: 
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - mountPath: /data
              name: redis
            - mountPath: /etc/localtime
              name: node-localtime
      volumes:
      - hostPath:
          path: /etc/localtime
        name: node-localtime
  volumeClaimTemplates:
    - metadata:
        name: cache
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: database
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 1Gi
    - metadata:
        name: redis
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: alicloud-disk-essd
        resources:
          requests:
            storage: 1Gi
