bsky/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsky
  labels:
    app.kubernetes.io/instance: bsky
    app.kubernetes.io/name: bsky
spec:
  type: ClusterIP
  ports:
    - name: http
      port: ${BSKY_PORT}
      protocol: TCP
      targetPort: ${BSKY_PORT}
  selector:
    app.kubernetes.io/instance: bsky
    app.kubernetes.io/name: bsky
